WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46464
SVGFEBlendElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=46464
Summary
SVGFEBlendElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-09-24 07:23:13 PDT
SVGFEBlendElement doesn't support dynamic invalidation
Attachments
Patch for feBlend properties
(916.57 KB, patch)
2010-09-24 07:51 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
Patch for feBlend properties
(853.53 KB, patch)
2010-09-26 06:43 PDT
,
Renata Hodovan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-09-24 07:51:26 PDT
Created
attachment 68680
[details]
Patch for feBlend properties
Dirk Schulze
Comment 2
2010-09-25 06:25:11 PDT
Comment on
attachment 68680
[details]
Patch for feBlend properties View in context:
https://bugs.webkit.org/attachment.cgi?id=68680&action=review
> LayoutTests/svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop-expected.txt:9 > +Normal > +Multiply > +Multiply > +Multiply > +Screen > +Darken > +Lighten
Did you forget to delete the printf on creating the results?
Renata Hodovan
Comment 3
2010-09-25 06:40:54 PDT
(In reply to
comment #2
)
> (From update of
attachment 68680
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=68680&action=review
> > > LayoutTests/svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop-expected.txt:9 > > +Normal > > +Multiply > > +Multiply > > +Multiply > > +Screen > > +Darken > > +Lighten > > Did you forget to delete the printf on creating the results?
No, it's just a description of the test.
Dirk Schulze
Comment 4
2010-09-25 08:45:05 PDT
Ah i see. I would prefer to see this information after the description. Maybe with an extra description what this names mean. I'm also not sure if this provides relevant informations. If not, you may leave it out.
Renata Hodovan
Comment 5
2010-09-25 09:16:00 PDT
(In reply to
comment #4
)
> Ah i see. I would prefer to see this information after the description. Maybe with an extra description what this names mean. I'm also not sure if this provides relevant informations. If not, you may leave it out.
I followed the example of feBlend filter by creating this test case (filters-blend-01-b-w3c.svg), but i can remove these lines if you think they are unrelevant :)
Dirk Schulze
Comment 6
2010-09-26 02:39:51 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > Ah i see. I would prefer to see this information after the description. Maybe with an extra description what this names mean. I'm also not sure if this provides relevant informations. If not, you may leave it out. > > I followed the example of feBlend filter by creating this test case (filters-blend-01-b-w3c.svg), but i can remove these lines if you think they are unrelevant :)
I think so. Please leave it out.
Renata Hodovan
Comment 7
2010-09-26 06:43:03 PDT
Created
attachment 68847
[details]
Patch for feBlend properties
Dirk Schulze
Comment 8
2010-09-26 10:29:46 PDT
Comment on
attachment 68847
[details]
Patch for feBlend properties LTM. r=me.
WebKit Commit Bot
Comment 9
2010-09-26 10:45:32 PDT
Comment on
attachment 68847
[details]
Patch for feBlend properties Clearing flags on attachment: 68847 Committed
r68344
: <
http://trac.webkit.org/changeset/68344
>
WebKit Commit Bot
Comment 10
2010-09-26 10:45:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug