2010-09-26  Renata Hodovan  <reni@inf.u-szeged.hu>

Reviewed by Dirk Schulze.

        SVGFEBlendElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=46464
        Adding layout tests for feBlend dynamic changes.

        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-in-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-in-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-in2-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-in2-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-mode-attr-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-dom-mode-attr-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-in-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-in-prop-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-in2-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-in2-prop-expected.png: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop-expected.checksum: Added.
        * platform/mac/svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop-expected.png: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-in-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-in-attr.html: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-in2-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-in2-attr.html: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-mode-attr-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-dom-mode-attr.html: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-in-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-in-prop.html: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-in2-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-in2-prop.html: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop-expected.txt: Added.
        * svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop.html: Added.
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-dom-in-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-dom-in2-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-dom-mode-attr.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-svgdom-in-prop.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-svgdom-in2-prop.js: Added.
        (executeTest):
        * svg/dynamic-updates/script-tests/SVGFEBlendElement-svgdom-mode-prop.js: Added.
        (executeTest):
2010-09-26  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Dirk Schulze.

        SVGFEBlendElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=46464

        Tests: svg/dynamic-updates/SVGFEBlendElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEBlendElement-dom-in2-attr.html
               svg/dynamic-updates/SVGFEBlendElement-dom-mode-attr.html
               svg/dynamic-updates/SVGFEBlendElement-svgdom-in-prop.html
               svg/dynamic-updates/SVGFEBlendElement-svgdom-in2-prop.html
               svg/dynamic-updates/SVGFEBlendElement-svgdom-mode-prop.html

        * svg/SVGFEBlendElement.cpp:
        (WebCore::SVGFEBlendElement::svgAttributeChanged):
        * svg/SVGFEBlendElement.h:

Canonical link: https://commits.webkit.org/59034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68344 268f45cc-cd09-0410-ab3c-d52691b4dbfc